src/objects/npsp__DataImport__c.object
<CustomObject>
    <fields>
        <fullName>Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to prevent automatic payment creation</description>
        <inlineHelpText>Opportunity.npe01__Do_Not_Automatically_Create_Payment__c</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Acknowledgment_Status__c</fullName>
        <description>Sets the Acknowledgment Status on the Donation</description>
        <inlineHelpText>Opportunity.npsp__Acknowledgment_Status__c</inlineHelpText>
        <label>Donation Acknowledgment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity.npsp__Honoree_Contact__c</inlineHelpText>
        <label>Donation Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (Donation Honoree Contact)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Honoree_Name__c</fullName>
        <inlineHelpText>Opportunity.npsp__Honoree_Name__c</inlineHelpText>
        <label>Donation Honoree Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the matching gift for this Opportunity</description>
        <inlineHelpText>Opportunity.npsp__Matching_Gift_Account__c</inlineHelpText>
        <label>Donation Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Account)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Gift_Employer__c</fullName>
        <inlineHelpText>Opportunity.npsp__Matching_Gift_Employer__c</inlineHelpText>
        <label>Donation Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Gift_Status__c</fullName>
        <description>Holds the status of the matching gift, passed to the Donation when imported</description>
        <inlineHelpText>Opportunity.npsp__Matching_Gift_Status__c</inlineHelpText>
        <label>Donation Matching Gift Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the matching gift for this Donation</description>
        <inlineHelpText>Opportunity.npsp__Matching_Gift__c</inlineHelpText>
        <label>Donation Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NPSP Data Imports (Donation Matching Gift)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Notification_Message__c</fullName>
        <description>Sets the Notification Message on the Donation</description>
        <inlineHelpText>Opportunity.npsp__Notification_Message__c</inlineHelpText>
        <label>Donation Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Primary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Campaign</description>
        <inlineHelpText>Opportunity.CampaignId</inlineHelpText>
        <label>Donation Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Tribute_Type__c</fullName>
        <description>Donation Tribute Type</description>
        <inlineHelpText>Opportunity.npsp__Tribute_Type__c</inlineHelpText>
        <label>Donation Tribute Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Name__c</fullName>
        <inlineHelpText>Opportunity.npsp__Notification_Recipient_Name__c</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>